--- a/xxl-job-admin/src/main/resources/i18n/message.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message.properties
@@ -1,5 +1,6 @@
-admin_name=任务调度中心
-admin_name_full=分布式任务调度平台XXL-JOB
+#admin_name=任务调度中心
+admin_name=广联达调度平台
+admin_name_full=广联达调度平台
 admin_version=2.2.0-SNAPSHOT
 admin_i18n=
 
